[gd_scene load_steps=5 format=2]

[ext_resource path="res://actors/Destination.gd" type="Script" id=1]
[ext_resource path="res://actors/navigation/MovementSystem.gd" type="Script" id=2]
[ext_resource path="res://actors/navigation/DestinationMarker.tscn" type="PackedScene" id=3]
[ext_resource path="res://test_theme.theme" type="Theme" id=4]

[node name="MovementSystem" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ActionSelect" type="PopupMenu" parent="CanvasLayer"]
margin_left = 18.4709
margin_top = 16.0664
margin_right = 38.4709
margin_bottom = 36.0664
theme = ExtResource( 4 )

[node name="DestinationSelection" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="DestinationMarker" parent="DestinationSelection" instance=ExtResource( 3 )]
visible = false
position = Vector2( -1.23511, -403.454 )
priority = 1.0
[connection signal="id_pressed" from="CanvasLayer/ActionSelect" to="." method="_on_ActionSelect_id_pressed"]
[connection signal="dest_marker_clicked" from="DestinationSelection/DestinationMarker" to="DestinationSelection" method="_on_DestinationMarker_dest_marker_clicked"]
